New tool config option: 'All frames'